# $Id$

2006-03-26	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/OSQL/QueryIdentification.class.php: now implements Stringable
	for debugging purposes.

	* core/Base/Singletone.class.php: dropped in the sake of sanity.

	* main/DAOs/SmartDaoWorker.class.php,
	main/DAOs/VoodooDaoWorker.class.php,
	core/Cache/WatermarkedPeer.class.php: implemented ability to avoid
	project's namespace in-cache collisions by watermarking all cache'
	activity.

2006-03-13	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* meta/classes/: fixed indentation issues, now 100% compatible with
	our coding style standarts.

	* core/OSQL/DialectString.class.php: toString() renamed to
	toDialectString(), to avoid collision with Stringable interface.

2006-03-12	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* meta/: proto classes implementation finished.

	* core/Form/FormUtils.class.php: import/export utilities, extracted
	from Form.

	* core/Form/Form.class.php: ability to scope's cleanup dropped;
	method primitiveExist renamed to primitiveExists;

2006-03-09	Anton E. Lebedevich	<noiselist@pochta.ru>

	* main/Flow/: initial import.

2006-03-09	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* meta/: creation of prototyped classes implemented.

	* core/Form/PrimitiveIdentifier.class.php: for resolving incapsulated
	objects.

	* core/Form/: two last primitives separated from factory file.

	* meta/: all formatting stuff moved to separate class.

	* 0.2.9 released.

2006-03-08	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/OSQL/DBValue.class.php: don't quote integer values.

2006-03-03	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/DAOs/VoodooDaoWorker.class.php,
	main/DAOs/SmartDaoWorker.class.php,
	main/DAOs/TransparentDaoWorker.class.php: fourth dao worker
	implemented: lockingless, transparent, greedy and damn fast.

2006-03-01	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/DAOs/NamedObjectDAO.class.php: typo spotted.
