@@ -23,35 +23,6 @@
 			return new self;
 		}
 		
-		public function getList()
-		{
-			return $this->vars;
-		}
-		
-		public function setVar($name, $var)
-		{
-			$this->vars[$name] = $var;
-			
-			return $this;
-		}
-		
-		public function getVar($name)
-		{
-			return $this->vars[$name];
-		}
-		
-		public function hasVar($name)
-		{
-			return isset($this->vars[$name]);
-		}
-		
-		public function dropVar($name)
-		{
-			unset($this->vars[$name]);
-			
-			return $this;
-		}
-		
 		public function clean()
 		{
 			$this->vars = array();
@@ -62,6 +33,63 @@
 		public function isEmpty()
 		{
 			return ($this->vars === array());
+		}
+		
+		public function getList()
+		{
+			return $this->vars;
+		}
+		
+		public function set($name, $var)
+		{
+			$this->vars[$name] = $var;
+			
+			return $this;
+		}
+		
+		public function get($name)
+		{
+			return $this->vars[$name];
+		}
+		
+		public function has($name)
+		{
+			return isset($this->vars[$name]);
+		}
+		
+		public function drop($name)
+		{
+			unset($this->vars[$name]);
+			
+			return $this;
+		}
+		
+		/// @deprecated by set
+		public function setVar($name, $var)
+		{
+			$this->vars[$name] = $var;
+			
+			return $this;
+		}
+		
+		/// @deprecated by get
+		public function getVar($name)
+		{
+			return $this->vars[$name];
+		}
+		
+		/// @deprecated by has
+		public function hasVar($name)
+		{
+			return isset($this->vars[$name]);
+		}
+		
+		/// @deprecated by drop
+		public function dropVar($name)
+		{
+			unset($this->vars[$name]);
+			
+			return $this;
 		}
 	}
 ?>
