@@ -4,5 +4,4 @@
 	// paths
 	define('PATH_BASE', ONPHP_TEST_PATH.'meta'.DIRECTORY_SEPARATOR);
 	define('PATH_CLASSES', PATH_BASE);
-
 ?>
