@@ -29,9 +29,12 @@
 		// provide paths to autogenerated stuff
 		set_include_path(
 			get_include_path().PATH_SEPARATOR
-			.ONPHP_TEST_PATH.'meta'.DIRECTORY_SEPARATOR.'Auto'.PATH_SEPARATOR
-			.ONPHP_TEST_PATH.'meta'.DIRECTORY_SEPARATOR.'Business'.PATH_SEPARATOR
-			.ONPHP_TEST_PATH.'meta'.DIRECTORY_SEPARATOR.'DAOs'
+			.ONPHP_META_AUTO_BUSINESS_DIR.PATH_SEPARATOR
+			.ONPHP_META_AUTO_DAO_DIR.PATH_SEPARATOR
+			.ONPHP_META_AUTO_PROTO_DIR.PATH_SEPARATOR
+			
+			.ONPHP_META_DAO_DIR.PATH_SEPARATOR
+			.ONPHP_META_BUSINESS_DIR
 		);
 		
 		$test->addTestClass(new DAOTest());
